# Marketing-Tool

./: Data Collection.ipynb  message-generator.ipynb  pyproject.toml  requirements.txt  stores_nearby_with_zipcode.csv
.ipynb_checkpoints/: Data Collection-checkpoint.ipynb
docs/: Data Collection.docx
notebooks/: message-generator.ipynb
