[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["snehvora <82407280+snehvora@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
openai = "^1.58.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
